# openai-agents-sdk

./: .env.example  README.md  learned_topics.md  oops.md  system_design_part_1.md
agent_as_tool/: pyproject.toml
agent_as_tool/src/agent_as_tool/: __init__.py  main.py
agent_hook/: pyproject.toml
agent_hook/src/agent_hook/: __init__.py  custom.py  main.py
basic_agents/: pyproject.toml
basic_agents/src/basic_agents/: __init__.py  with_chat_completion.py  with_litellm.py  with_openrouter.py
chain_tool/: pyproject.toml
chain_tool/src/chain_tool/: __init__.py  main.py
chainlit/: pyproject.toml
chainlit/src/class_02/: __init__.py  main.py
class_00/: pyproject.toml
class_00/src/class_00/: __init__.py  lite.py  open.py
context/: pyproject.toml
context/src/context/: main.py
guardrails/: pyproject.toml
guardrails/src/guardrails/: __init__.py  main.py
handsoff/: pyproject.toml
handsoff/src/handsoff/: __init__.py  main.py
learn/: document.md  pyproject.toml
learn/src/learn/: __init__.py  main.py
memory-langmen/base_email_assistant/: pyproject.toml
memory-langmen/base_email_assistant/src/: config.py  models.py  prompts.py  tools.py  utils.py
memory-langmen/base_email_assistant/src/base_email_assistant/: __init__.py  main.py
memory-langmen/langmem_core_api/: pyproject.toml
memory-langmen/langmem_core_api/src/langmem_core_api/: __init__.py  main.py
memory-langmen/langmen-openai-agents/: pyproject.toml
memory-langmen/langmen-openai-agents/src/langmen_openai_agents/: __init__.py  externelDB.py  main.py
memory-langmen/sementic_episodic_procedural/: pyproject.toml
memory-langmen/sementic_episodic_procedural/src/smart_assistant/: __init__.py  main.py
openAi-sdk/: chainlit.py  pyproject.toml
openAi-sdk/src/openai_sdk/: __init__.py  async_main.py  sync.py
projects/MarketAura/: memory_state_nadeemsangrasi.json  pyproject.toml
projects/MarketAura/src/marketaura/: __init__.py  main.py  prompts.py  tools.py  utils.py
projects/legal-ai-agent/: README.md  memory_state_nadeemsangrasi.json  pyproject.toml
projects/legal-ai-agent/src/legal_ai_agent/: main.py
projects/legal-ai-agent/src/models/: model.py
projects/legal-ai-agent/src/prompts/: prompt.py
projects/legal-ai-agent/src/utils/: util.py
run_life_cycle/: pyproject.toml
run_life_cycle/src/run_life_cycle/: __init__.py  main.py
sat_2to5_assignments/Career Mentor Agent/: pyproject.toml
sat_2to5_assignments/Career Mentor Agent/src/career_mentor_agent/: __init__.py  main.py  run_config.py
sat_2to5_assignments/Career Mentor Agent/src/career_mentor_agent/agent/: career_agent.py  job_agent.py  skill_agent.py
sat_2to5_assignments/Career Mentor Agent/src/career_mentor_agent/tools/: career_tool.py  skill_tool.py
sat_2to5_assignments/game_master_agent/: pyproject.toml
sat_2to5_assignments/game_master_agent/src/game_master_agent/: __init__.py  main.py
sat_2to5_assignments/game_master_agent/src/game_master_agent/agents/: item_agent.py  monster_agent.py  narrator_agent.py
sat_2to5_assignments/game_master_agent/src/game_master_agent/tools/: dice_tool.py  event_tool.py
sat_2to5_assignments/smart_student_agent/src/smart_student_agent/: main.py
sat_2to5_assignments/travel_designer_agent/: pyproject.toml
sat_2to5_assignments/travel_designer_agent/src/travel_designer_agent/: __init__.py  main.py
sat_2to5_assignments/travel_designer_agent/src/travel_designer_agent/agents/: booking_agent.py  destination_agent.py  explore_agent.py
sat_2to5_assignments/travel_designer_agent/src/travel_designer_agent/tools/: flights_tool.py  hotels_tool.py
smart_student_agent/: pyproject.toml
smart_student_agent/src/smart_student_agent/: __init__.py
stream/: pyproject.toml
stream/src/stream/: __init__.py  main.py
stream_chainlit/: pyproject.toml
stream_chainlit/src/stream_chainlit/: __init__.py  main.py
tool_calling/: pyproject.toml
tool_calling/src/tool_calling/: main.py
tracing/local/: pyproject.toml
tracing/local/src/local/: __init__.py  main.py
