[project]
name = "openai-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadeem", email = "nadeemsangrasi903@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "chainlit>=2.4.1",
    "dotenv>=0.9.9",
    "openai-agents>=0.0.4",
]

[project.scripts]
openai-sdk-sync = "openai_sdk.sync:main"
openai-sdk-async = "openai_sdk.async_main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
