[project]
name = "run-life-cycle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadeem", email = "nadeemsangrasi903@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
run-life-cycle = "run_life_cycle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
