[project]
name = "base-email-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadeem", email = "nadeemsangrasi903@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langchain-google-genai>=2.1.5",
    "langmem>=0.0.27",
    "langmem-adapter>=0.0.2",
    "openai-agents>=0.0.17",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]

[project.scripts]
base-email-assistant = "base_email_assistant:main"
flow = "base_email_assistant.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
