[project]
name = "langmem-core-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadeem", email = "nadeemsangrasi903@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "langchain-google-genai>=2.1.5",
    "langmem>=0.0.27",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
]

[project.scripts]
langmem-core-api = "langmem_core_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
