[project]
name = "career-mentor-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "nadeem", email = "nadeemsangrasi903@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "chainlit>=2.6.2",
    "openai-agents>=0.2.3",
    "python-dotenv>=1.1.1",
    "serpapi>=0.1.5",
]

[project.scripts]
agent = "career_mentor_agent.main:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
